<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.practico3.ui.home.HomeFragment"
        android:label="@string/menu_cargar"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.practico3.ui.gallery.GalleryFragment"
        android:label="@string/menu_listar"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.practico3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_modificar"
        android:name="com.example.practico3.ui.modificar.ModificarFragment"
        android:label="@string/menu_modificar"
        tools:layout="@layout/fragment_modificar" >
        <action
            android:id="@+id/action_nav_modificar_to_detalleProductoFragment"
            app:destination="@id/detalleProductoFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleProductoFragment"
        android:name="com.example.practico3.ui.modificar.DetalleProductoFragment"
        android:label="Modificar Producto"
        tools:layout="@layout/fragment_detalle_producto" >
        <action
            android:id="@+id/action_detalleProductoFragment_to_nav_modificar"
            app:destination="@id/nav_modificar" />
    </fragment>
</navigation>